# zoning-agent-platform

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  package-lock.json  package.json  progress.md  render.yaml  vercel.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202605220001_initial_persistence_schema.py  202605220002_enable_rls_for_public_tables.py  202605230001_phase2_source_vector_metadata.py  202605240001_public_access_foundation.py  202605250001_public_launch_coverage.py  202605280001_add_legal_ack_at_to_projects.py  202605290001_add_chunk_filter_columns.py
apps/api/app/: auth.py  cache.py  database.py  district_mapping.py  ingestion.py  jurisdictions.py  main.py  models.py  repositories.py  services.py  settings.py  source_classifier.py  startup.py  storage.py  watsonx_client.py
apps/api/app/ai/: __init__.py  deterministic_provider.py  embedding_provider.py  failover_provider.py  gemini_batch_embedding.py  groq_provider.py  hybrid_local_retriever.py  interfaces.py  local_model_provider.py  openai_compatible.py  openai_provider.py  registry.py  source_registry_retriever.py  watsonx_provider.py
apps/api/app/data/: district_rules.json  jurisdictions.json  parcel_fixtures.json  source_registry.json
apps/api/app/orchestrator/: __init__.py  pipeline_context.py  pipeline_events.py  zoning_orchestrator.py
apps/api/app/prompts/: __init__.py  compliance_synthesis.md  evidence_grading.md  intake_extraction.md
apps/api/app/rag/: __init__.py  vector_store.py
apps/api/app/routers/: api.py
apps/api/app/tools/: __init__.py  address_tool.py  citation_tool.py  compliance_tool.py  intake_tool.py  jurisdiction_tool.py  parcel_tool.py  report_tool.py
apps/api/tests/: test_address_tool.py  test_ai_providers.py  test_api.py  test_cache.py  test_compliance.py  test_database.py  test_dimensional_retrieval.py  test_gemini_batch_embedding.py  test_ingestion.py  test_intake_tool.py  test_jurisdiction_detection.py  test_jurisdiction_tool.py  test_orchestrator.py  test_parcel_tool.py  test_rag_phase2.py  test_repositories.py  test_services.py  test_settings.py  test_source_classifier.py  test_source_pack_validation.py  test_startup.py  test_watsonx_client.py
apps/api/tests/eval/: __init__.py  ci_gate.py  dataset_schema.py  runner.py  test_eval_harness.py  test_montgomery_dataset.py
apps/api/tests/eval/datasets/: README.md  albemarle-county-va.json  alexandria-va.json  chesapeake-va.json  danville-va.json  franklin-tn.json  fredericksburg-va.json  hampton-va.json  henrico-county-va.json  (+14 more)
apps/api/tests/golden/: __init__.py  runner.py  scenarios.json  test_golden_scenarios.py
apps/api/tests/property/: test_property_evals.py
(+246 files in other folders)
