[project]
name = "zoning-agent-api"
version = "0.1.0"
description = "FastAPI backend for a provider-agnostic zoning assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.1",
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "qdrant-client>=1.12.0",
  "openai>=1.57.0",
  "PyJWT[crypto]>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.14.0"
]
monitoring = [
  "sentry-sdk[fastapi]>=2.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp"
